  * DistUpgrade/DistUpgradeCache.py:
    - add hardyQuirks handler to deal with
      gtranslator/gvfs issues (thanks to Daniel Holbach)
  * DistUpgrade/DistUpgrade.cfg:
    - add "ksplash-engine-moodin" to ForcedObsoletes
  * DistUpgrade/removal_blacklist.cfg:
    - add "^postgresql-.*"to the removal blacklist
  * DistUpgrade/DistUpgradeViewText.py:
    - flush() output in updateStatus()
  * DistUpgrade/DistUpgradeCache.py:
    - fix bug that prevented proper error message on 
      upgrade calculation error in the text frontend
    - show the demoted packages in a more readable
      manner

 --

update-manager (1:0.87.12) hardy; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix display of non-ascii chars
    - improve editing capabilities of the terminal (should be 
      fine with the readline fontend now)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 11 Mar 2008 22:01:36 +0100

update-manager (1:0.87.11) hardy; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - when upgrading without network and with a empty sources.list,
      do not ask to add network sources
  * DistUpgrade/DistUpgradeCache.py:
    - do not crash if lookupRecords() failed (LP: #199482)
  * UpdateManager/UpdateManager.py:
    - use absolute path when calling gksu (LP: #194166),
      Thanks to Mihai Varzaru and James Westby
  * data/update-manager.desktop.in:
    - improve consistency with the rest of gnome (LP: #150205)
  * DistUpgrade/DistUpgradeViewKDE.py:
    - do no longer use konsole during upgrades but use a dumb
      terminal instead that only supports basic editing
    - log terminal activity to /var/log/dist-upgrade/term.log

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 11 Mar 2008 09:40:49 +0100

update-manager (1:0.87.10) hardy; urgency=low

  * remove code duplication in the confirmChanges() code and make the
    warning more readable (LP: #188724)
  * DistUpgrade/DistUpgradeController.py: